--- a/styles.css
+++ b/styles.css
@@ -341,7 +341,7 @@ body {
   content: '';
   position: absolute;
   inset: 0;
-  background: url('assets/img/hero-bg.png') center/cover no-repeat;
+  background: url('assets/img/hero-bg.webp') center/cover no-repeat;
   opacity: 0.9;
 }
 
